--- a/package.json
+++ b/package.json
@@ -4,23 +4,12 @@
   "description": "Minimalistic Templating Engine for Nodejs",
   "main": "build/Mostachito.js",
   "scripts": {
-    "clean": "rm -fr ./build/*",
-    "prebuild": "npm run clean",
-    "build": "babel -d ./build ./src",
-    "coverage:generate": "nyc npm run test",
-    "coverage:check": "nyc check-coverage --lines 90 --branches 80 --statements 90 --functions 90",
-    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov",
-    "coverage:report:upload": "CODECOV_TOKEN=\"$(grep \"CODECOV_TOKEN=\" .env | cut -d'=' -f2)\" codecov",
-    "coverage": "npm run coverage:generate && npm run coverage:check && npm run coverage:report && npm run coverage:report:upload",
-    "test": "mocha --require @babel/register --recursive",
-    "develop": "nodemon --exec babel-node ./src/index.js",
-    "serve": "NODE_ENV=production node ./build/index.js",
-    "semantic-release": "semantic-release"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run test && npm run coverage:generate && npm run coverage:check"
-    }
+    "test": "tsc && mocha --recursive ./build/test",
+    "dev": "tsc -w",
+    "start": "nodemon ./build/src/index.js",
+    "serve": "tsc && NODE_ENV=production node ./build/src/index.js",
+    "build": "tsc && node ./build/src/compile.js",
+    "build:clean": "rm -fR ./build"
   },
   "repository": {
     "type": "git",
@@ -40,18 +29,11 @@
   },
   "homepage": "https://github.com/gbili/mostachito#readme",
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
-    "@babel/node": "7.4.5",
-    "@babel/preset-env": "7.4.5",
-    "@babel/register": "7.4.4",
+    "@types/chai": "4.2.11",
+    "@types/mocha": "7.0.2",
     "chai": "4.2.0",
-    "codecov": "^3.5.0",
-    "ghooks": "^2.0.4",
-    "mocha": "6.1.4",
-    "nodemon": "1.19.1",
-    "nyc": "^14.1.1",
-    "semantic-release": "^15.13.18"
+    "mocha": "8.0.1",
+    "nodemon": "2.0.4"
   },
   "dependencies": {},
   "directories": {
