--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mostachito",
-  "version": "0.0.0-development",
+  "version": "1.1.0",
   "description": "Minimalistic Templating Engine for Nodejs",
   "main": "build/Mostachito.js",
   "scripts": {
