--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mostachito",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Minimalistic Templating Engine for Nodejs",
-  "main": "build/Mostachito.js",
+  "main": "build/src/Mostachito.js",
   "scripts": {
     "test": "tsc && mocha --recursive ./build/test",
     "dev": "tsc -w",
