--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mostachito",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Minimalistic Templating Engine for Nodejs",
   "main": "build/src/Mostachito.js",
   "scripts": {
@@ -29,13 +29,12 @@
   },
   "homepage": "https://github.com/gbili/mostachito#readme",
   "devDependencies": {
-    "@types/chai": "4.2.11",
-    "@types/mocha": "7.0.2",
-    "chai": "4.2.0",
-    "mocha": "8.0.1",
-    "nodemon": "2.0.4"
+    "@types/chai": "latest",
+    "@types/mocha": "latest",
+    "chai": "latest",
+    "mocha": "latest",
+    "nodemon": "latest"
   },
-  "dependencies": {},
   "directories": {
     "test": "test"
   }
