--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mostachito",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Minimalistic Templating Engine for Nodejs",
   "main": "build/src/Mostachito.js",
   "scripts": {
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/chai": "latest",
     "@types/mocha": "latest",
-    "@types/node": "^16.11.11",
+    "@types/node": "22.13.5",
     "chai": "latest",
     "mocha": "latest",
     "nodemon": "latest"
